fix(ui-vision): Conditional search box, fix selects focus handling, update row spacing (#11725)
* Hide search when options are less than 5
* Fix gap between field rows
* Update tests
* Fix alignment of the field labels / info field values

--- a/packages/tickets/src/components/InfobarCustomerFields/InfobarCustomerFields.less
+++ b/packages/tickets/src/components/InfobarCustomerFields/InfobarCustomerFields.less
@@ -12,7 +12,9 @@
     }
 
     .infoFieldRow {
-        padding: var(--spacing-xxxs) 0;
+        span {
+            line-height: 24px;
+        }
     }
 
     .fieldValue {
