--- a/packages/tickets/src/components/InfobarCustomerFields/components/FieldRow.less
+++ b/packages/tickets/src/components/InfobarCustomerFields/components/FieldRow.less
@@ -15,12 +15,14 @@
             }
         }
 
-        label {
+        [data-name='label'] {
             margin: 0 !important;
-            align-items: center;
+            height: 24px;
+
             span {
                 color: var(--content-neutral-secondary);
                 font-weight: 400;
+                line-height: 24px;
             }
         }
     }
